@@ -115,4 +115,12 @@
     <cvs-directory>evince/help</cvs-directory>
   </module>
 
+  <module id="zenity">
+    <cvs-directory>zenity/help</cvs-directory>
+  </module>
+
+  <module id="sound-juicer">
+    <cvs-directory>sound-juicer/help/sound-juicer</cvs-directory>
+  </module>
+
 </gnomedocs>
