@@ -1,3 +1,7 @@
+2005-07-27  Danilo Šegan  <danilo@gnome.org>
+
+	* modules.xml: Added zenity, sound-juicer.
+
 2005-07-24  Danilo Šegan  <danilo@gnome.org>
 
 	* modules.xml: Added applets, evince.
